--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -1,4 +1,9 @@
-<b>TrashChannel added tour commands:-</b>
+<img src="https://orig00.deviantart.net/6e87/f/2016/005/f/e/_327_spinda_by_pokemon_ressources-d9mksys.gif">
+<big><big><big><b>T R A S H C H A N N E L</b></big></big></big></img>
+<img src="https://orig00.deviantart.net/6e87/f/2016/005/f/e/_327_spinda_by_pokemon_ressources-d9mksys.gif">
+<br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
+<br>
+<br><b>Added tour commands:-</b>
 <br>R 350 Cup Rule - Adds 350 Cup rules to battles
 <br>Camomons Rule - Adds Camomons rules to battles
 <br><b>NEW!!</b> Tier Shift Rule - Adds Tier Shift rules to battles
