--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -3,10 +3,14 @@
 <img src="https://orig00.deviantart.net/6e87/f/2016/005/f/e/_327_spinda_by_pokemon_ressources-d9mksys.gif">
 <br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
 <br>
+<br><b>Original meme metas:-</b>
+<br><b>NEW!!</b> The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
+<br>
 <br><b>Added tour commands:-</b>
 <br>R 350 Cup Rule - Adds 350 Cup rules to battles
 <br>Camomons Rule - Adds Camomons rules to battles
-<br><b>NEW!!</b> Tier Shift Rule - Adds Tier Shift rules to battles
+<br><b>NEW!!</b> Reversed Rule - Adds Reversed rules to battles
+<br>Tier Shift Rule - Adds Tier Shift rules to battles
 <br>
 <br><b>Added chat commands:-</b>
-<br><b>NEW!!</b> /350ts - /350 + /ts
+<br>/350ts - /350 + /ts
