--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -3,7 +3,8 @@
 <img src="https://orig00.deviantart.net/6e87/f/2016/005/f/e/_327_spinda_by_pokemon_ressources-d9mksys.gif">
 <br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
 <br>
-<br><b>Original meme metas:-</b>
+<br><b>Trash Channel Original Programming:-</b>
+<br><b>NEW!!</b> Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=230) BST Pok&eacute;mon as Stones.
 <br><b>NEW!!</b> The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
 <br>
 <br><b>Added tour commands:-</b>
@@ -14,3 +15,4 @@
 <br>
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
+<br><b>NEW!!</b> /bnb - See the effects of a Beggar Evolution. E.g. /bnb snorlax @ lotad
