Spin off Averagemons into its own rule

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -4,15 +4,16 @@
 <br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
 <br>
 <br><b>Trash Channel Original Programming:-</b>
-<br><b>NEW!!</b> Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=230) BST Pok&eacute;mon as Stones.
-<br><b>NEW!!</b> The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
+<br>Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=230) BST Pok&eacute;mon as Stones.
+<br>The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
 <br>
 <br><b>Added tour commands:-</b>
 <br>R 350 Cup Rule - Adds 350 Cup rules to battles
 <br>Camomons Rule - Adds Camomons rules to battles
-<br><b>NEW!!</b> Reversed Rule - Adds Reversed rules to battles
+<br>Reversed Rule - Adds Reversed rules to battles
 <br>Tier Shift Rule - Adds Tier Shift rules to battles
+<br><b>NEW!!</b> Averagemons Rule - Adds Averagemons rules to battles
 <br>
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
-<br><b>NEW!!</b> /bnb - See the effects of a Beggar Evolution. E.g. /bnb snorlax @ lotad
+<br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb snorlax @ lotad
