Make restrictions usable, procedural descriptions, BnB BST to 300

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -4,7 +4,7 @@
 <br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
 <br>
 <br><b>Trash Channel Original Programming:-</b>
-<br>Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=230) BST Pok&eacute;mon as Stones.
+<br><b>UPDATED!!</b> Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
 <br><b>NEW!!</b> BEA5T M0D3 - Pok&eacute;mon in this ZU-based meta can set other species as moves (including Ubers and Mega formes) to transform into them.
 <br>The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
 <br>
@@ -13,7 +13,7 @@
 <br>Camomons Rule - Adds Camomons rules to battles
 <br>Reversed Rule - Adds Reversed rules to battles
 <br>Tier Shift Rule - Adds Tier Shift rules to battles
-<br> Averagemons Rule - Adds Averagemons rules to battles
+<br>Averagemons Rule - Adds Averagemons rules to battles
 <br>
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
