Fix bnb command for bitch formes

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -17,4 +17,4 @@
 <br>
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
-<br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb snorlax @ lotad
+<br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb lycanroc-midnight @ geodude-alola
