--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -4,8 +4,13 @@
 <br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
 <br>
 <br><b>Trash Channel Original Programming:-</b>
-<br><b>UPDATED!!</b> Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
-<br><b>NEW!!</b> BEA5T M0D3 - Pok&eacute;mon in this ZU-based meta can set other species as moves (including Ubers and Mega formes) to transform into them.
+<br>
+<br><b>NEW!!</b> Mix and Meta - Pit sets from a variety of popular OMs against each other to see which is the strongest. (Check compatible metas by using /om mixandmeta).
+<br>
+<br>Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
+<br>
+<br>BEA5T M0D3 - Pok&eacute;mon in this ZU-based meta can set other species as moves (including Ubers and Mega formes) to transform into them.
+<br>
 <br>The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
 <br>
 <br><b>Added tour commands:-</b>
