Roomintro for SC package

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -16,6 +16,7 @@
 <br>Tier Shift Rule - Adds Tier Shift rules to battles
 <br>Averagemons Rule - Adds Averagemons rules to battles
 <br><b>NEW!!</b> Pokebilities Lite Rule - Adds main Pokebilities mechanic to battles
+<br><b>NEW!!</b> Suicide Cup Standard Package - Suicide Cup win condition and validation
 <br>
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
