Make Suicide Cup: Random Battle the default format

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -15,10 +15,13 @@
 <br>Reversed Rule - Adds Reversed rules to battles
 <br>Tier Shift Rule - Adds Tier Shift rules to battles
 <br>Averagemons Rule - Adds Averagemons rules to battles
-<br><b>NEW!!</b> Pokebilities Lite Rule - Adds main Pokebilities mechanic to battles
-<br><b>NEW!!</b> Suicide Cup Standard Package - Suicide Cup win condition and validation
+<br>Pokebilities Lite Rule - Adds main Pokebilities mechanic to battles
+<br>Suicide Cup Standard Package - Suicide Cup win condition and validation
 <br>
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
-<br><b>NEW!!</b> /mnmts - /mnm + /ts
+<br>/mnmts - /mnm + /ts
 <br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb lycanroc-midnight @ geodude-alola
+<br>
+<br><b>Expanded mashups:-</b>
+<br><b>NEW!!</b> Suicide Cup: Random Battle
