Add STAAABmons RU ladder, update room intro

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -25,3 +25,4 @@
 <br>
 <br><b>Expanded mashups:-</b>
 <br><b>NEW!!</b> Suicide Cup: Random Battle
+<br><b>NEW!!</b> Mega and Mega - Mega Stones and Primal Orbs can be used on almost any Pok&eacute;mon with no Mega Evolution limit, including Mega Evolutions as if they were normal Pok&eacute;mon.
