Implement CRABmons, fix syntax change on TeamValidator construction for Mix and Meta

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -7,7 +7,7 @@
 <br>Mix and Meta - Pit sets from a variety of popular OMs against each other to see which is the strongest. (Check compatible metas by using /om mixandmeta).
 <br>Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
 <br>BEA5T M0D3 - Pok&eacute;mon in this ZU-based meta can set other species as moves (including Ubers and Mega formes) to transform into them.
-<br>The Call of Pikacthulhu - Pok&eacute;mon get Perish status applied when entering battle.
+<br>The Call of Pikacthulhu - Pok&eacute;mon have Perish status applied when entering battle.
 <br>
 <br><b>Added tour commands:-</b>
 <br>R 350 Cup Rule - Adds 350 Cup rules to battles
@@ -23,6 +23,7 @@
 <br>/mnmts - /mnm + /ts
 <br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb lycanroc-midnight @ geodude-alola
 <br>
-<br><b>Expanded mashups:-</b>
-<br><b>NEW!!</b> Suicide Cup: Random Battle
+<br><b>Mirror Universe Mashups:-</b>
+<br>Suicide Cup: Random Battle - Play Suicide Cup with randomly-generated viable sets
 <br><b>NEW!!</b> Mega and Mega - Mega Stones and Primal Orbs can be used on almost any Pok&eacute;mon with no Mega Evolution limit, including Mega Evolutions as if they were normal Pok&eacute;mon.
+<br><b>NEW!!</b> CRABmons - Pok&eacute;mon change type to match any two moves they could learn naturally, and can use any move of their new typing, in addition to the moves they can normally learn.
