--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -22,8 +22,9 @@
 <br>/350ts - /350 + /ts
 <br>/mnmts - /mnm + /ts
 <br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb lycanroc-midnight @ geodude-alola
+<br><b>NEW!!</b> /mergeds, /mergems - Mergemons versions of the /ds and /ms commands
 <br>
 <br><b>Mirror Universe Mashups:-</b>
 <br>Suicide Cup: Random Battle - Play Suicide Cup with randomly-generated viable sets
-<br><b>NEW!!</b> Mega and Mega - Mega Stones and Primal Orbs can be used on almost any Pok&eacute;mon with no Mega Evolution limit, including Mega Evolutions as if they were normal Pok&eacute;mon.
-<br><b>NEW!!</b> CRABmons - Pok&eacute;mon change type to match any two moves they could learn naturally, and can use any move of their new typing, in addition to the moves they can normally learn.
+<br>Mega and Mega - Mega Stones and Primal Orbs can be used on almost any Pok&eacute;mon with no Mega Evolution limit, including Mega Evolutions as if they were normal Pok&eacute;mon.
+<br>CRABmons - Pok&eacute;mon change type to match any two moves they could learn naturally, and can use any move of their new typing, in addition to the moves they can normally learn.
