--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -3,6 +3,8 @@
 <img src="https://orig00.deviantart.net/6e87/f/2016/005/f/e/_327_spinda_by_pokemon_ressources-d9mksys.gif">
 <br>&nbsp; &nbsp; &nbsp; <i>Come on and Mash, and welcome to the Trash</i>
 <br>
+<br><b>(Some OMs will not function correctly during the generation transition.)</b>
+<br>
 <br><b>Trash Channel Original Programming:-</b>
 <br>Mix and Meta - Pit sets from a variety of popular OMs against each other to see which is the strongest. (Check compatible metas by using /om mixandmeta).
 <br>Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
