--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -12,7 +12,7 @@
 <br>The Call of Pikacthulhu - Pok&eacute;mon have Perish status applied when entering battle.
 <br>
 <br><b>Added tour commands:-</b>
-<br>R 350 Cup Rule - Adds 350 Cup rules to battles
+<br>350 Cup Rule - Adds 350 Cup rules to battles
 <br>Camomons Rule - Adds Camomons rules to battles
 <br>Reversed Rule - Adds Reversed rules to battles
 <br>Tier Shift Rule - Adds Tier Shift rules to battles
