Gen 8 BnB, make test making mnm ag work properly

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -6,8 +6,8 @@
 <br><b>(Some OMs will not function correctly during the generation transition.)</b>
 <br>
 <br><b>Trash Channel Original Programming:-</b>
+<br><b>GEN 8!!</b> Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
 <br>Mix and Meta - Pit sets from a variety of popular OMs against each other to see which is the strongest. (Check compatible metas by using /om mixandmeta).
-<br>Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
 <br>BEA5T M0D3 - Pok&eacute;mon in this ZU-based meta can set other species as moves (including Ubers and Mega formes) to transform into them.
 <br>The Call of Pikacthulhu - Pok&eacute;mon have Perish status applied when entering battle.
 <br>
@@ -23,8 +23,8 @@
 <br><b>Added chat commands:-</b>
 <br>/350ts - /350 + /ts
 <br>/mnmts - /mnm + /ts
-<br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb lycanroc-midnight @ geodude-alola
-<br><b>NEW!!</b> /mergeds, /mergems - Mergemons versions of the /ds and /ms commands
+<br>/bnb - See the effects of a Beggar Evolution. E.g. /bnb rapidash-galar @ applin
+<br>/mergeds, /mergems - Mergemons versions of the /ds and /ms commands
 <br>
 <br><b>Mirror Universe Mashups:-</b>
 <br>Suicide Cup: Random Battle - Play Suicide Cup with randomly-generated viable sets
