Beta test Gen 8 metas like Pokebilities and PiC, ban dynamax in 350 Cup

--- a/config/roomintro.html
+++ b/config/roomintro.html
@@ -5,6 +5,10 @@
 <br>
 <br><b>(Some OMs will not function correctly during the generation transition.)</b>
 <br>
+<br><b>Gen 8 Beta Tests:-</b>
+<br>Pokebilities
+<br>Partners in Crime
+<br>
 <br><b>Trash Channel Original Programming:-</b>
 <br><b>GEN 8!!</b> Bitch and Beggar - Pok&eacute;mon can 'Beggar-Evolve' using low (<=300) BST Pok&eacute;mon as Stones.
 <br>Mix and Meta - Pit sets from a variety of popular OMs against each other to see which is the strongest. (Check compatible metas by using /om mixandmeta).
@@ -17,7 +21,6 @@
 <br>Reversed Rule - Adds Reversed rules to battles
 <br>Tier Shift Rule - Adds Tier Shift rules to battles
 <br>Averagemons Rule - Adds Averagemons rules to battles
-<br>Pokebilities Lite Rule - Adds main Pokebilities mechanic to battles
 <br>Suicide Cup Standard Package - Suicide Cup win condition and validation
 <br>
 <br><b>Added chat commands:-</b>
@@ -28,5 +31,4 @@
 <br>
 <br><b>Mirror Universe Mashups:-</b>
 <br>Suicide Cup: Random Battle - Play Suicide Cup with randomly-generated viable sets
-<br>Mega and Mega - Mega Stones and Primal Orbs can be used on almost any Pok&eacute;mon with no Mega Evolution limit, including Mega Evolutions as if they were normal Pok&eacute;mon.
 <br>CRABmons - Pok&eacute;mon change type to match any two moves they could learn naturally, and can use any move of their new typing, in addition to the moves they can normally learn.
